<resources>
    <string name="msg_please_wait">Please wait…</string>
    <string name="error_server_no_response">No response</string>
    <string name="error_server_400bad_request">Sorry! Bad data</string>
    <string name="error_server_401unaunthorized">Sorry! You\'re not authorized for this</string>
    <string name="error_server_403forbidden">Sorry! You\'re not allowed to take this action</string>
    <string name="error_server_405forbidden">Sorry! Action not allowed</string>
    <string name="error_server_500internal_error">Sorry! Server internal error</string>
    <string name="error_server_503unavailable">Sorry! Service unavailable</string>
    <string name="error_general">Sorry! Something went wrong</string>
    <string name="msg_no_internet">No internet connection</string>
    <string name="error_required">Required!</string>
    <string name="error_not_valid">Not Valid!</string>
    <string name="error_invalid_mobile_num">Invalid Mobile Number</string>
    <string name="sign_up_title">Sign up with Chalk Board</string>
    <string name="label_mobile_num">Mobile number</string>
    <string name="label_password">Password</string>
    <string name="label_sing_in">Sign In</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_school_name">School Name</string>
    <string name="label_specialization">Specialization</string>
    <string name="label_get_started">Get Started</string>
    <string name="label_sign_up_as">Sign up as:</string>
    <string name="label_teacher">Teacher</string>
    <string name="label_parent">Parent</string>
    <string name="label_student">Student</string>
    <string name="error_min_eight_char">Required minimum 8 character long!</string>
    <string name="msg_select_role">Select your role!</string>
    <string name="hint_otp">otp</string>
    <string name="label_welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue_with_chalk_boards">Sign In to continue with Chalk &amp; Boards</string>
    <string name="label_dont_have_account">Don\'t  have an account?</string>
    <string name="label_sign_up"><u>Sign Up</u></string>
</resources>
