<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.schoolmanagement.android.widgets.TextViewMedium
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sign_up_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_big" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="36dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_first_name"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toStartOf="@+id/layout_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_last_name"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layout_first_name"
                app:layout_constraintTop_toTopOf="parent">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_email"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_last_name">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_password"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_email">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mobile_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_mobile_num"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_password">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_mobile_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_school_name"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_mobile_num">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_specialization"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/label_specialization"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_school">

                <com.schoolmanagement.android.widgets.EditTextRegular
                    android:id="@+id/edit_specialization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <com.schoolmanagement.android.widgets.TextViewRegular
                android:id="@+id/title_role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/label_sign_up_as"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/font_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_specialization" />

            <com.schoolmanagement.android.widgets.TextViewRegular
                android:id="@+id/role_teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_outline_primary"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/label_teacher"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/font_normal"
                app:layout_constraintEnd_toStartOf="@+id/role_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_role" />

            <com.schoolmanagement.android.widgets.TextViewRegular
                android:id="@+id/role_parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_outline_primary"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/label_parent"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/font_normal"
                app:layout_constraintEnd_toStartOf="@+id/role_student"
                app:layout_constraintStart_toEndOf="@+id/role_teacher"
                app:layout_constraintTop_toBottomOf="@+id/title_role" />

            <com.schoolmanagement.android.widgets.TextViewRegular
                android:id="@+id/role_student"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_outline_primary"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/label_student"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/font_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/role_parent"
                app:layout_constraintTop_toBottomOf="@+id/title_role" />

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:background="@color/primary_color"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/label_get_started"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/role_parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>